# LocalMaxSearch

./: CMakeLists.txt  main.cpp
